@@ -7,6 +7,7 @@
 
 bool kvu_string_icmp(const std::string& a, const std::string& b);
 
+std::string kvu_string_regex_meta_escape(const std::string& arg);
 std::string kvu_string_shell_meta_escape(const std::string& arg);
 std::vector<std::string> kvu_string_to_tokens(const std::string& s);
 std::vector<std::string> kvu_string_to_tokens_quoted(const std::string& s);
@@ -16,6 +17,9 @@ std::vector<int> kvu_string_to_int_vector(const std::string& str, const std::str
 std::string kvu_string_search_and_replace(const std::string& a, 
 					  const std::string::value_type from,
 					  const std::string::value_type to);
+std::string kvu_string_search_and_replace(const std::string& str, 
+					  const std::string& from,
+					  const std::string& to);
 std::vector<std::string> kvu_vector_search_and_replace(const std::vector<std::string>& str_vector, 
 						       const std::string& from, const std::string& to);
 std::string kvu_vector_to_string(const std::vector<std::string>& str, 
